--- a/index.html
+++ b/index.html
@@ -36,7 +36,28 @@
     </header>
 
     <main>
+        <section class="banner">
+           
+        </section>
+        <h1 class="servicos">O que você encontra na Confeito Doce:</h1>
+       <div class="servicos-card">
+            <div class="cursos">
+                <img src="./img/chapeu.svg">
+                <h3>Cursos:</h3>
+                <p>Aprenda receitas únicas com nossos chefs.</p>
+            </div>
 
+            <div class="sobreNos">
+             <img src="./img/pessoas.svg">
+             <h3>Sobre Nós</h3>
+             <p>Conheça nossa história e participe da nossa comunidade.</p>
+            </div>
+
+            <div class="encomendas">
+                <img src="" alt="">
+            </div>
+
+  </div>
     </main>
 </body>
 
