finalizando site confeito doce

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <div class="container-flex">
             <img id="logo" src="logo rosa .svg" alt="Logo da Confeito Doce">
 
+            <div class="pesquisar">
+        <img src="./img/search.svg">
+        <input type="text" placeholder="Buscar...">
+    </div>
             <nav id="menu" class="links">
                 <a href="#catalogo">Carrinho de compras</a>
                 <a href="#">Perfil</a>
